CHANGES IN VERSION 0.3-6 - Released 2015/??/??

CODE IMPROVEMENTS

* As per CRAN policies, the title in the DESCRIPTION file is now in title
  case.

CHANGES IN VERSION 0.3-5 - Released 2014/11/06

API CHANGES

* The default Qhull option to the delaunayn() function is now "Qt"
  rather than "QJ" and degenerate (zero-area) simplices are removed
  from the triangulation, so that all simplicies are non-degenerate.
  This is a follow-up to issue #2009: delaunayn can return degenerate
  simplicies by default
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1993&group_id=1149&atid=4552). Thanks
  to Rolf Turner for alerting me to the issue. 

* delaunayn() now throws an error if the number of points is less than
  the number of dimensions + 1.

FEATURES

* delaunayn() with the "full" option also returns the areas of
  facets. This is a byproduct of the API change above.

BUG FIXES

* Fix for Issue #2789: inline functions min/max generate linker error
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=2789&group_id=1149&atid=4552)
  Thanks to Bernd Bischl for reporting the problem and suggesting the
  fix.

* Partial Fix for Issue #5738: segfault when run from directory
  lacking write permission
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=5738&group_id=1149&atid=4552)
  An error is now thrown, rather than a segfault. The underlying
  problem still needs to be dealth with.

DOCUMENTATION IMPROVEMENTS

* The meanings of "area" and "vol" in the convhulln return value have
  been clarified. Thanks to Michael Cole for raising the issue.

* The documentation of "cart2bary" and "bary2cart" has been corrected
  and improved. Thanks to Francisco Mendoza Torres for raising the issue.

* HTML documentation has been for validation errors with HTML tidy.
  Thanks to Kurt Hornik and the CRAN maintainers for alerting me to
  the problem.

CODE IMPROVEMENTS

* Tests are now all done using the testthat framework.
